# rust-experiments

./: .gitignore  Cargo.toml  README.md  perf.data.old
benches/: benchmark_tests.rs  criterion_tests.rs
docs/api/: search-index.js
docs/api/implementors/core/convert/: trait.From.js
docs/api/implementors/core/fmt/: trait.Debug.js
docs/api/implementors/core/ops/arith/: trait.Sub.js
docs/api/rust_experiments/: index.html  sidebar-items.js
docs/api/rust_experiments/cities/: find_city_distances.v.html  fn.find_city_distances.html  fn.gen_cities.html  fn.gen_cities_hashset.html  fn.gen_cities_uset.html  gen_cities.v.html  gen_cities_hashset.v.html  gen_cities_uset.v.html  index.html  sidebar-items.js
docs/api/rust_experiments/utils/: index.html  sidebar-items.js
docs/api/rust_experiments/utils/uset/: index.html  sidebar-items.js  struct.USet.html
docs/api/src/rust_experiments/: lib.rs.html
docs/api/src/rust_experiments/cities/: mod.rs.html
docs/api/src/rust_experiments/utils/: mod.rs.html  uset.rs.html
src/: lib.rs  main.rs
src/arena/: arena1.rs  arena1_tests.rs  arena2.rs  arena2_tests.rs  mod.rs
src/cities/: cities_tests.rs  mod.rs
src/redis/: mod.rs
src/redis/core/: mod.rs
src/redis/streams/: mod.rs
src/strings/: mod.rs
src/utils/: mod.rs  prng.rs  prng_tests.rs  umap.rs  umap_tests.rs  uset.rs  uset_tests.rs
tests/: integration_tests.rs
