[package]
name = "rust-experiments"
version = "0.1.0"
authors = ["Maciej Gorywoda <makingthematrix@gmail.com>"]

[profile.bench]
debug=true

[dependencies]
rand = "0.4.2"
flexi_logger = "0.6"
log = "*"
itertools = "0.7.6"
[dev-dependencies]
quickcheck = "0.6.1"
spectral = "0.6.0"
criterion = "0.2.0"

[[bench]]
name = "criterion_tests"
harness = false
