[package]
name = "rust-experiments"
version = "0.1.0"
authors = ["Maciej Gorywoda <makingthematrix@gmail.com>"]
edition="2018"

[profile.bench]
debug=true

[dependencies]
rand = "0.4.2"
flexi_logger = "0.10.5"
log = "*"
itertools = "0.8.0"
derive_more = "0.14.0"
lazy_static = "1.3.0"
[dev-dependencies]
quickcheck = "0.8.2"
spectral = "0.6.0"
criterion = "0.2.0"

[[bench]]
name = "criterion_tests"
harness = false
